kubernetes/apps/kasm/db.yml
apiVersion: v1
kind: Service
metadata:
  name: kasm-db
  namespace: apps
spec:
  ports:
    - port: 5432
  selector:
    app: kasm-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kasm-db
  namespace: apps
spec:
  serviceName: "kasm-db"
  replicas: 1
  selector:
    matchLabels:
      app: kasm-db
  template:
    metadata:
      labels:
        app: kasm-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 5Gi
