kubernetes/apps/kasm/kasm.yml
apiVersion: v1
kind: Service
metadata:
  name: kasm
  namespace: apps
spec:
  ports:
    - port: 443
      targetPort: 443
      name: https
  selector:
    app: kasm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kasm
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kasm
  template:
    metadata:
      labels:
        app: kasm
    spec:
      containers:
        - name: kasm
          image: kasmweb/kasm:1.15.0
          ports:
            - containerPort: 443
          volumeMounts:
            - name: data
              mountPath: /opt/kasm/current
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kasm-data
