kubernetes/apps/kasm/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: kasm-redis
  namespace: apps
spec:
  ports:
    - port: 6379
  selector:
    app: kasm-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kasm-redis
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kasm-redis
  template:
    metadata:
      labels:
        app: kasm-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
